Fixed code spacing.

--- a/extras/main.css
+++ b/extras/main.css
@@ -1,29 +1,47 @@
 a
 {
     text-decoration: none;
+    color: #6E92EF;
+}
+
+a:visited
+{
+    color: #FF75E5;
+}
+
+a:hover
+{
+    color: #3E68D1;
 }
 
 body
 {
-    font: 20px "Lucida Sans Unicode";
-    color: #404040;
-    background-color: #FFFFFF;
+    font: 18px "Lucida Sans Unicode";
+    color: #FFFFFF;
+    background-color: #202020;
+}
+
+hr
+{
+    border: 1px solid #303030;
 }
 
 h1
 {
-    color: #404040;
+    color: #FFFFFF;
 }
 
 code
 {
-    font: 16px "Lucida Sans Unicode";
+    font: 14px "Courier New";
+    display:inline-block;
+    line-height: 1.2em;
 }
 
 figcaption
 {
-    font: 16px "Lucida Sans Unicode";
-    color: #505050;
+    font: 14px "Lucida Sans Unicode";
+    color: #DFDFDF;
 }
 
 #mainDiv
